overflow fix

--- a/sass/template/index.scss
+++ b/sass/template/index.scss
@@ -59,6 +59,10 @@ a {
 	background-color: $base;
 }
 
+#page {
+	overflow: hidden;
+}
+
 
 @include respond-to(md) {
 
